removed 'will-change: transform' to fix scrolling issue on firefox

--- a/public_html/assets/css/styles.css
+++ b/public_html/assets/css/styles.css
@@ -433,7 +433,6 @@ PORTFOLIO
 		top: 0;
 		left: 0;
 		opacity: .15;
-		will-change: transform;
 		z-index: -1;
 	}
 
